set up migrations, create artist controller and set up test file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,17 @@
 {
-    "env": {
-        "node": true,
-        "commonjs": true,
-        "es2021": true
-    },
-    "extends": "eslint:recommended",
-    "globals": {
-        "Atomnics": "readonly", 
-        "SharedArrayBuffer": "readonly"
-    },
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
-    "rules": {
-    }
+  "env": {
+    "node": true,
+    "commonjs": true,
+    "es2021": true
+  },
+  "extends": "eslint:recommended",
+  "globals": {
+    "Atomnics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest"
+  },
+  "rules": {}
 }
